fix: attachment flex malfunction
if a channel has too few messages, an attachment seems to causes to flex go crazy and creates large spaces between them as it tries to distribute them across the height of the chat view

--- a/src/components/chat/mainContent.css
+++ b/src/components/chat/mainContent.css
@@ -83,7 +83,6 @@
 }
 
 .message-details {
-  flex: 1;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -291,7 +290,8 @@ input:focus {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
-  margin-top: 8px;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .chat-image {
